# aula_16_bootcamp_python

./: README.md  main.py  pyproject.toml  select_vulneravel.py
